<resources>
    <string name="app_name">PinSplorer</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="hello_blank_fragment">blank fragment</string>
    <string name="menu_browse_pinsets_pic">Browse Pinsets</string>
    <string name="menu_saved_pinsets">Your Pinsets</string>
    <string name="splash_string">Adventure Awaits…</string>
    <string name="menu_map_pic">Map</string>
    <string name="menu_follow_pinsets_pic">Followed Pinsets</string>
    <string name="API_KEY">AIzaSyC4Kk1-uikWbHWvcltTrCSG9q8Zv8qjzzk</string>
    <string name="delete">delete</string>
    <string name="delete_desc">Delete Icon</string>
    <string name="mark_viewed">Mark Viewed</string>
    <string name="set_name">Set Name</string>
    <string name="pins">Pins</string>
    <string name="placeholder">#</string>
    <string name="followers">Followers</string>
    <string name="creator">Creator:</string>
    <string name="name">Name</string>
    <string name="mark_visited">Mark Visited</string>
    <string name="snack_bar_undo">Undo</string>
    //Please don't commit the API key to github bc it might charge my google cloud account if it
    gets overused by other people
    //Just put the key in here @API_KEY when you're testing the app and delete it from here again
    when you commit


</resources>
